Implement block and ublock user feature
