# routes/adminRoutes.js
@@ -8,6 +8,9 @@ const {
   approveCashRequest,
   getWithdrawRequests,
   approveWithdrawRequest,
+  getBlockedUsers,
+  blockUser,
+  unblockUser,
   } = require("../controllers/adminController");
 
 
@@ -17,6 +20,9 @@ router.get("/admin/cash-approval", protect, getCashRequests);
 router.post("/admin/cash-approval/:id", protect, approveCashRequest);
 router.get("/admin/withdraw-request", protect, getWithdrawRequests);
 router.post("/admin/withdraw-request/:id", protect, approveWithdrawRequest);
+router.get("/admin/blocked-users", protect, getBlockedUsers);
+router.post("/admin/block-user", protect, blockUser);
+router.post("/admin/unblock-user", protect, unblockUser);
 
 
 
